// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Design System/Input AvecBordsColorés smoke-test 1`] = `
<div class="inline-flex items-stretch border border-solid rounded-lg bg-grey-1 overflow-hidden focus-within:border-primary-5 border-error-1">
  <input type="text"
         class="grow text-grey-8 px-4 outline-none text-md py-3 border-r border-solid border-error-1"
         placeholder="placeholder"
         value
  >
  <button class="w-fit border-solid font-bold group cursor-pointer rounded-lg border text-primary-7 hover:!text-primary-8 bg-white hover:!bg-primary-1 border-white hover:!border-primary-1 p-3.5 rounded-none border-none"
          style="color: rgb(245, 91, 91);"
  >
    <div class="flex items-center gap-2">
      <span class="ri-search-line font-normal text-center h-5 w-5 text-[1.25rem] leading-[1.25rem] fill-primary-7 group-hover:fill-primary-8">
      </span>
    </div>
  </button>
</div>
`;

exports[`Design System/Input AvecIcone smoke-test 1`] = `
<div class="inline-flex items-stretch border border-solid rounded-lg bg-grey-1 overflow-hidden focus-within:border-primary-5 border-grey-4">
  <input type="text"
         class="grow text-grey-8 px-4 outline-none text-md py-3 border-r border-solid border-grey-4"
         placeholder="placeholder"
         value
  >
  <span class="ri-search-line font-normal text-center h-5 w-5 text-[1.25rem] leading-[1.25rem] self-center min-w-[3rem] text-primary">
  </span>
</div>
`;

exports[`Design System/Input AvecIconeBouton smoke-test 1`] = `
<div class="inline-flex items-stretch border border-solid rounded-lg bg-grey-1 overflow-hidden focus-within:border-primary-5 border-grey-4">
  <input type="text"
         class="grow text-grey-8 px-4 outline-none text-md py-3 border-r border-solid border-grey-4"
         placeholder="placeholder"
         value
  >
  <button title="Rechercher"
          class="w-fit border-solid font-bold group cursor-pointer rounded-lg border text-primary-7 hover:!text-primary-8 bg-white hover:!bg-primary-1 border-white hover:!border-primary-1 p-3.5 rounded-none border-none"
  >
    <div class="flex items-center gap-2">
      <span class="ri-search-line font-normal text-center h-5 w-5 text-[1.25rem] leading-[1.25rem] fill-primary-7 group-hover:fill-primary-8">
      </span>
    </div>
  </button>
</div>
`;

exports[`Design System/Input AvecIconeBoutonEtDesactive smoke-test 1`] = `
<div class="inline-flex items-stretch border border-solid rounded-lg bg-grey-1 overflow-hidden focus-within:border-primary-5 border-grey-4">
  <input type="text"
         class="grow text-grey-8 px-4 outline-none text-md py-3 border-r border-solid border-grey-4"
         disabled
         placeholder="placeholder"
         value
  >
  <button title="Rechercher"
          disabled
          class="w-fit border-solid font-bold group cursor-not-allowed rounded-lg border !text-primary-4 !bg-white !border-white p-3.5 rounded-none border-none"
  >
    <div class="flex items-center gap-2">
      <span class="ri-search-line font-normal text-center h-5 w-5 text-[1.25rem] leading-[1.25rem] fill-primary-4">
      </span>
    </div>
  </button>
</div>
`;

exports[`Design System/Input AvecIconeEtDesactive smoke-test 1`] = `
<div class="inline-flex items-stretch border border-solid rounded-lg bg-grey-1 overflow-hidden focus-within:border-primary-5 border-grey-4">
  <input type="text"
         class="grow text-grey-8 px-4 outline-none text-md py-3 border-r border-solid border-grey-4"
         disabled
         placeholder="placeholder"
         value
  >
  <span class="ri-search-line font-normal text-center h-5 w-5 text-[1.25rem] leading-[1.25rem] self-center min-w-[3rem] text-grey-6">
  </span>
</div>
`;

exports[`Design System/Input AvecIconeTexte smoke-test 1`] = `
<div class="inline-flex items-stretch border border-solid rounded-lg bg-grey-1 overflow-hidden focus-within:border-primary-5 border-grey-4">
  <input type="text"
         class="grow text-grey-8 px-4 outline-none text-md py-3 border-r border-solid border-grey-4"
         placeholder="placeholder"
         value
  >
  <span class="self-center text-xs text-center font-bold min-w-[3rem] text-primary">
    TTC
  </span>
</div>
`;

exports[`Design System/Input AvecIconeTexteEtDesactive smoke-test 1`] = `
<div class="inline-flex items-stretch border border-solid rounded-lg bg-grey-1 overflow-hidden focus-within:border-primary-5 border-grey-4">
  <input type="text"
         class="grow text-grey-8 px-4 outline-none text-md py-3 border-r border-solid border-grey-4"
         disabled
         placeholder="placeholder"
         value
  >
  <span class="self-center text-xs text-center font-bold min-w-[3rem] text-grey-6">
    TTC
  </span>
</div>
`;

exports[`Design System/Input AvecPlaceholder smoke-test 1`] = `
<div class="inline-flex items-stretch border border-solid rounded-lg bg-grey-1 overflow-hidden focus-within:border-primary-5 border-grey-4">
  <input type="text"
         class="grow text-grey-8 px-4 outline-none text-md py-3"
         placeholder="Saisir une valeur"
         data-test="ok"
         value
  >
</div>
`;

exports[`Design System/Input AvecValeur smoke-test 1`] = `
<div class="inline-flex items-stretch border border-solid rounded-lg bg-grey-1 overflow-hidden focus-within:border-primary-5 border-grey-4">
  <input type="text"
         class="grow text-grey-8 px-4 outline-none text-md py-3"
         value="plop"
  >
</div>
`;

exports[`Design System/Input Default smoke-test 1`] = `
<div class="inline-flex items-stretch border border-solid rounded-lg bg-grey-1 overflow-hidden focus-within:border-primary-5 border-grey-4">
  <input type="text"
         class="grow text-grey-8 px-4 outline-none text-md py-3"
         value
  >
</div>
`;

exports[`Design System/Input TypeDate smoke-test 1`] = `
<div class="inline-flex items-stretch border border-solid rounded-lg bg-grey-1 overflow-hidden focus-within:border-primary-5 border-grey-4">
  <input type="date"
         class="grow text-grey-8 px-4 outline-none text-md py-3 border-r border-solid border-grey-4 [&amp;::-webkit-calendar-picker-indicator]:hidden"
         value
  >
  <button class="w-fit border-solid font-bold group cursor-pointer rounded-lg border text-primary-7 hover:!text-primary-8 bg-white hover:!bg-primary-1 border-white hover:!border-primary-1 p-3.5 rounded-none border-none">
    <div class="flex items-center gap-2">
      <span class="ri-calendar-line font-normal text-center h-5 w-5 text-[1.25rem] leading-[1.25rem] fill-primary-7 group-hover:fill-primary-8">
      </span>
    </div>
  </button>
</div>
`;

exports[`Design System/Input TypeDateAvecValeur smoke-test 1`] = `
<div class="inline-flex items-stretch border border-solid rounded-lg bg-grey-1 overflow-hidden focus-within:border-primary-5 border-grey-4">
  <input type="date"
         class="grow text-grey-8 px-4 outline-none text-md py-3 border-r border-solid border-grey-4 [&amp;::-webkit-calendar-picker-indicator]:hidden"
         value="2024-01-17"
  >
  <button class="w-fit border-solid font-bold group cursor-pointer rounded-lg border text-primary-7 hover:!text-primary-8 bg-white hover:!bg-primary-1 border-white hover:!border-primary-1 p-3.5 rounded-none border-none">
    <div class="flex items-center gap-2">
      <span class="ri-calendar-line font-normal text-center h-5 w-5 text-[1.25rem] leading-[1.25rem] fill-primary-7 group-hover:fill-primary-8">
      </span>
    </div>
  </button>
</div>
`;

exports[`Design System/Input TypeNumberFloat smoke-test 1`] = `
<div class="inline-flex items-stretch border border-solid rounded-lg bg-grey-1 overflow-hidden focus-within:border-primary-5 border-grey-4">
  <input type="text"
         class="grow text-grey-8 px-4 outline-none text-md py-3"
         value
         inputmode="numeric"
  >
</div>
`;

exports[`Design System/Input TypeNumberFloatAvecValeur smoke-test 1`] = `
<div class="inline-flex items-stretch border border-solid rounded-lg bg-grey-1 overflow-hidden focus-within:border-primary-5 border-grey-4">
  <input type="text"
         class="grow text-grey-8 px-4 outline-none text-md py-3"
         value="12 345,67"
         inputmode="numeric"
  >
</div>
`;

exports[`Design System/Input TypeNumberInt smoke-test 1`] = `
<div class="inline-flex items-stretch border border-solid rounded-lg bg-grey-1 overflow-hidden focus-within:border-primary-5 border-grey-4">
  <input type="text"
         class="grow text-grey-8 px-4 outline-none text-md py-3"
         value
         inputmode="numeric"
  >
</div>
`;

exports[`Design System/Input TypeNumberIntAvecValeur smoke-test 1`] = `
<div class="inline-flex items-stretch border border-solid rounded-lg bg-grey-1 overflow-hidden focus-within:border-primary-5 border-grey-4">
  <input type="text"
         class="grow text-grey-8 px-4 outline-none text-md py-3"
         value="12 345"
         inputmode="numeric"
  >
</div>
`;

exports[`Design System/Input TypePassword smoke-test 1`] = `
<div class="inline-flex items-stretch border border-solid rounded-lg bg-grey-1 overflow-hidden focus-within:border-primary-5 border-grey-4">
  <input type="password"
         class="grow text-grey-8 px-4 outline-none text-md py-3 border-r border-solid border-grey-4"
         value
  >
  <button title="Voir le mot de passe"
          class="w-fit border-solid font-bold group cursor-pointer rounded-lg border text-primary-7 hover:!text-primary-8 bg-white hover:!bg-primary-1 border-white hover:!border-primary-1 p-3.5 rounded-none border-none"
  >
    <div class="flex items-center gap-2">
      <span class="ri-eye-line font-normal text-center h-5 w-5 text-[1.25rem] leading-[1.25rem] fill-primary-7 group-hover:fill-primary-8">
      </span>
    </div>
  </button>
</div>
`;

exports[`Design System/Input TypePasswordAvecValeur smoke-test 1`] = `
<div class="inline-flex items-stretch border border-solid rounded-lg bg-grey-1 overflow-hidden focus-within:border-primary-5 border-grey-4">
  <input type="password"
         class="grow text-grey-8 px-4 outline-none text-md py-3 border-r border-solid border-grey-4"
         value="hyper secret"
  >
  <button title="Voir le mot de passe"
          class="w-fit border-solid font-bold group cursor-pointer rounded-lg border text-primary-7 hover:!text-primary-8 bg-white hover:!bg-primary-1 border-white hover:!border-primary-1 p-3.5 rounded-none border-none"
  >
    <div class="flex items-center gap-2">
      <span class="ri-eye-line font-normal text-center h-5 w-5 text-[1.25rem] leading-[1.25rem] fill-primary-7 group-hover:fill-primary-8">
      </span>
    </div>
  </button>
</div>
`;

exports[`Design System/Input TypeSearch smoke-test 1`] = `
<div class="inline-flex items-stretch border border-solid rounded-lg bg-grey-1 overflow-hidden focus-within:border-primary-5 border-grey-4">
  <input type="search"
         class="grow text-grey-8 px-4 outline-none text-md py-3 border-r border-solid border-grey-4 search-reset:appearance-none search-reset:w-5 search-reset:h-5 search-reset:bg-close-circle-fill"
         value
  >
  <button title="Rechercher"
          disabled
          class="w-fit border-solid font-bold group cursor-not-allowed rounded-lg border !text-primary-4 !bg-white !border-white p-3.5 rounded-none border-none"
  >
    <div class="flex items-center gap-2">
      <span class="ri-search-line font-normal text-center h-5 w-5 text-[1.25rem] leading-[1.25rem] fill-primary-4">
      </span>
    </div>
  </button>
</div>
`;

exports[`Design System/Input TypeSearchAvecValeur smoke-test 1`] = `
<div class="inline-flex items-stretch border border-solid rounded-lg bg-grey-1 overflow-hidden focus-within:border-primary-5 border-grey-4">
  <input type="search"
         class="grow text-grey-8 px-4 outline-none text-md py-3 border-r border-solid border-grey-4 search-reset:appearance-none search-reset:w-5 search-reset:h-5 search-reset:bg-close-circle-fill"
         value="valeur recherchée"
  >
  <button title="Rechercher"
          class="w-fit border-solid font-bold group cursor-pointer rounded-lg border text-primary-7 hover:!text-primary-8 bg-white hover:!bg-primary-1 border-white hover:!border-primary-1 p-3.5 rounded-none border-none"
  >
    <div class="flex items-center gap-2">
      <span class="ri-search-line font-normal text-center h-5 w-5 text-[1.25rem] leading-[1.25rem] fill-primary-7 group-hover:fill-primary-8">
      </span>
    </div>
  </button>
</div>
`;

exports[`Design System/Input TypeSearchLoading smoke-test 1`] = `
<div class="inline-flex items-stretch border border-solid rounded-lg bg-grey-1 overflow-hidden focus-within:border-primary-5 border-grey-4">
  <input type="search"
         class="grow text-grey-8 px-4 outline-none text-md py-3 border-r border-solid border-grey-4 search-reset:appearance-none search-reset:w-5 search-reset:h-5 search-reset:bg-close-circle-fill"
         value="valeur recherchée"
  >
  <button title="Rechercher"
          class="w-fit border-solid font-bold group cursor-pointer rounded-lg border text-primary-7 hover:!text-primary-8 bg-white hover:!bg-primary-1 border-white hover:!border-primary-1 p-3.5 rounded-none border-none"
  >
    <div class="flex items-center gap-2">
      <span class="ri-loader-4-line animate-spin font-normal text-center h-5 w-5 text-[1.25rem] leading-[1.25rem] fill-primary-7 group-hover:fill-primary-8">
      </span>
    </div>
  </button>
</div>
`;

exports[`Design System/Input VarianteSmall smoke-test 1`] = `
<div class="inline-flex items-stretch border border-solid rounded-lg bg-grey-1 overflow-hidden focus-within:border-primary-5 border-grey-4">
  <input type="text"
         class="grow text-grey-8 px-4 outline-none text-sm py-2"
         placeholder="placeholder"
         value
  >
</div>
`;

exports[`Design System/Input VarianteSmallEtBouton smoke-test 1`] = `
<div class="inline-flex items-stretch border border-solid rounded-lg bg-grey-1 overflow-hidden focus-within:border-primary-5 border-grey-4">
  <input type="text"
         class="grow text-grey-8 px-4 outline-none text-sm py-2 border-r border-solid border-grey-4"
         placeholder="placeholder"
         value
  >
  <button title="Rechercher"
          class="w-fit border-solid font-bold group cursor-pointer rounded-lg border text-primary-7 hover:!text-primary-8 bg-white hover:!bg-primary-1 border-white hover:!border-primary-1 p-2.5 rounded-none border-none"
  >
    <div class="flex items-center gap-2">
      <span class="ri-search-line font-normal text-center h-5 w-5 text-[1.25rem] leading-[1.25rem] fill-primary-7 group-hover:fill-primary-8">
      </span>
    </div>
  </button>
</div>
`;

exports[`Design System/Input VarianteSmallIconeTexte smoke-test 1`] = `
<div class="inline-flex items-stretch border border-solid rounded-lg bg-grey-1 overflow-hidden focus-within:border-primary-5 border-grey-4">
  <input type="text"
         class="grow text-grey-8 px-4 outline-none text-sm py-2 border-r border-solid border-grey-4"
         placeholder="placeholder"
         value
  >
  <span class="self-center text-xs text-center font-bold min-w-[3rem] text-primary">
    TTC
  </span>
</div>
`;
